# voting-anchor-moonzoon

./: README.md
app/: .gitignore
app/backend/: Cargo.toml
app/backend/src/: init_voting_state.rs  main.rs  solana_helpers.rs
app/frontend/: Cargo.toml
app/frontend/src/add_party_page/: add_party_transaction.rs
app/frontend/src/add_voter_page/: add_voter_transaction.rs
app/frontend/src/parties_page/: vote_transaction.rs
program/: Anchor.toml  README.md
program/programs/program/: Cargo.toml
program/programs/voting_program/: Cargo.toml
program/programs/voting_program/src/: instruction_api.rs  lib.rs
program/tests/: program.js
