[package]
name = "voting_program"
version = "0.1.0"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "voting_program"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
# anchor-lang = "0.17.0"
# anchor-lang = { path = "../../../../anchor/lang" }
anchor-lang = { git = "https://github.com/MartinKavik/anchor", branch = "wasm_compatible" }

# solana-program = "=1.7.12"
solana-program = { git = "https://github.com/solana-labs/solana", rev = "92e72d99" }
